force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/MRIS_RealtyTrac_Survey__c.object-meta.xml
<CustomObject>
    <label>MRIS RealtyTrac Survey</label>
    <nameField>
        <displayFormat>RTS-{0000}</displayFormat>
        <label>MRIS RealtyTrac Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRIGHT RealtyTrac Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>