force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>MRIS RealtyTrac Surveys</relationshipLabel>
    <relationshipName>MRIS_RealtyTrac_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>