force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner__c</fullName>
    <formula>Campaign__r.Owner.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Owner</label>
    <type>Text</type>
</CustomField>