force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MRIS RealtyTrac Surveys</relationshipLabel>
    <relationshipName>MRIS_RealtyTrac_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>