force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/How_improve__c.field-meta.xml
<CustomField>
    <fullName>How_improve__c</fullName>
    <description>How can MRIS improve RealtyTrac to help meet your real estate business needs?</description>
    <label>How can MRIS improve RealtyTrac?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>