force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Like_the_least__c.field-meta.xml
<CustomField>
    <fullName>Like_the_least__c</fullName>
    <label>What do you like the least about RealtyT</label>
    <length>250</length>
    <type>Text</type>
</CustomField>