force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Like_the_most__c.field-meta.xml
<CustomField>
    <fullName>Like_the_most__c</fullName>
    <description>What do you like the most about RealtyTrac?</description>
    <label>What do you like the most about RealtyTr</label>
    <length>250</length>
    <type>Text</type>
</CustomField>