force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/MRIS_ID__c.field-meta.xml
<CustomField>
    <fullName>MRIS_ID__c</fullName>
    <label>MRIS ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>