force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Overall_rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_rate__c</fullName>
    <label>Overall, how would you rate the features</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>