force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>