force-app/main/default/objects/MRIS_RealtyTrac_Survey__c/fields/Read_Only_survey_link__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_survey_link__c</fullName>
    <label>Read Only survey link</label>
    <type>Url</type>
</CustomField>